<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewMaterialCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/sign_up"
                    android:textSize="32sp" />

                <TextView
                    style="@style/TextViewMaterialCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textSize="15sp" />

                <TextView
                    style="@style/TextViewMaterialCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/drawable_for_input_layout">

                    <EditText
                        android:id="@+id/name_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="12dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <TextView
                    style="@style/TextViewMaterialCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/login"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/drawable_for_input_layout">

                    <EditText
                        android:id="@+id/login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="12dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <TextView
                    style="@style/TextViewMaterialCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/password"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/drawable_for_input_layout">

                    <EditText
                        android:id="@+id/password_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="12dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_up" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextViewMaterialCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif"
                        android:text="@string/have_already_account"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/try_to_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/sign_in"
                        android:textColor="?attr/colorAccent"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>
</FrameLayout>